# PHOBos

./: .gitignore  .readthedocs.yml  Computer_setup_information.org~  DM_config.json  Makefile  POWER_CONTROL_SUMMARY.md  README.md  config.yml  environment.yml  example_config.yml  kbch  lab_tests.ipynb  migrate_kbench.py  phob  pyproject.toml  requirements-lab.txt  requirements.txt  test_compat.py  test_new_power_control.py  test_shifters.py  test_simple.py  tests_topas.ipynb  timeit_tests.ipynb
.github/: copilot-instructions.md
.github/workflows/: release_on_pypi.yml
analysis/: Analysis.ipynb  Analysis_backup.ipynb  cell_content.txt  characterization_report.md  characterization_results.npy  extract_data.py  inspect_data.py  inspect_output.txt  modify_notebook_phase_constraints.py  optimize_matrix.py  print_matrices.py  processed_harmonics.npy  results_report.md  solve_matrices.py  test_load.py  update_notebook.py  validate_model.py
docs/: api.md  atmosphere.md  bench_overview.md  conf.py  configuration_file.md  cred3.md  deformable_mirror.md  filter_wheel.md  index.md  installation.md  kernel.md  newport.md  photonic_chip.md  pupil_mask.md  requirements.txt  segment.md  zaber copy.md  zaber.md
examples/: CALIBRATION_GUIDE.md  calibrate_architectures.py
scripts/: background_light.py  cli_linux.py  cli_linux.py.backup  cli_takedark.py  incoherent_scan.py  injection_opt.py  lens_distance_calculator.py  patch_analysis_notebook.py  phase_shifter.py  reset_camera.sh
src/kbench/: __init__.py
src/phobos/: __init__.py
tests/: lab_tests.ipynb  solve_matrix.ipynb
(+36 files in other folders)
