[project]
name = "Kbench"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Vincent Foriel", email = "vincent.foriel@gmail.com"},
    {name = "mmartinod", email = "ma.martinod@free.fr"},
]
dependencies = [
    "numpy",
    "pyserial",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["kbench*", "bmc*"]

[tool.setuptools.package-data]
"bmc" = ["*.so"]
